Added up button in the app bar for the forgotten password activity #21

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ForgottenPasswordActivity"
-                  android:label="ForgottenPasswordActivity"
-                  android:theme="@style/AppTheme.NoActionBar">
+                  android:label="Forgot Password?"
+                  android:theme="@style/AppTheme"
+                  android:parentActivityName=".SignInSignUp" >
+                  <!-- The meta-data element is needed for versions lower than 4.1 -->
+                  <meta-data android:name="android.support.PARENT_ACTIVITY"
+                             android:value=".SignInSignUp" />
+
         </activity>
         <activity
             android:name=".SignInSignUp"
