--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
         unitTests.includeAndroidResources = true
         unitTests.returnDefaultValues = true
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
