- Fix back button on toolbar - Code reorganisation in packages - Same view/edit activity for student and tutor (same actions performed regardless of the user's role) - getProfilePicBitmap written to download profile pic from firestore only when necessary (not called atm) - View list of subjects (learning needs for students, tutoring subjects for tutors)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    compile 'com.github.richimf:Alphabetik:1.0.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
