--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,38 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".StudentProfileEditActivity"
+            android:name=".users.UserProfileEditActivity"
             android:label="Edit My Profile"
-            android:parentActivityName=".StudentProfileActivity"
-            android:theme="@style/AppTheme">
-
-            <!-- The meta-data element is needed for versions lower than 4.1 -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".StudentProfileActivity" />
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name=".StudentProfileActivity"
+            android:name=".users.UserProfileActivity"
             android:label="My Profile"
-            android:parentActivityName=".MainActivityStudent"
-            android:theme="@style/AppTheme">
-
-            <!-- The meta-data element is needed for versions lower than 4.1 -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivityStudent" />
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".MainActivityTutor" />
+        <activity android:name=".users.tutor.MainActivityTutor" />
         <activity
             android:name=".ForgottenPasswordActivity"
             android:label="Forgot Password?"
-            android:parentActivityName=".SignInSignUp"
-            android:theme="@style/AppTheme">
-
-            <!-- The meta-data element is needed for versions lower than 4.1 -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SignInSignUp" />
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".SignInSignUp"
@@ -56,7 +38,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivityStudent"
+            android:name=".users.student.MainActivityStudent"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
