--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,12 +45,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.1'
     implementation 'com.google.firebase:firebase-firestore:17.0.2'
-    compile 'com.google.firebase:firebase-storage:16.0.1'
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    compile 'com.github.richimf:Alphabetik:1.0.3'
+    implementation 'com.github.richimf:Alphabetik:1.0.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
