- Fixed visibility issues when navigating back and forth between view profile and edit profile and emptying the list of subjects and populating it again (issue #11) - Continuing on #12 (toolbar + back navigation added)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".users.student.SearchTutorsActivity"></activity>
+        <activity
+            android:name=".users.student.SearchTutorsActivity"
+            android:label="Search Tutors"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".users.UserProfileEditActivity"
             android:label="Edit My Profile"
