--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.github.richimf:Alphabetik:1.0.3'
+    implementation 'com.squareup:android-times-square:1.6.5@aar'
 }
 
 apply plugin: 'com.google.gms.google-services'
