Add chat activity
Added chat activity, finished Messaging implementation.

Related #13

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -161,6 +161,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <service android:name=".queue.channelRcv.QueueService"/>
     </application>
 
 </manifest>
