--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity
             android:name=".users.student.ViewTutorProfileActivity"
             android:label="Selected Tutor's Profile"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +25,7 @@
         <activity
             android:name=".RequestSessionActivity"
             android:label="Request a session"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,6 +36,7 @@
         <activity
             android:name=".ViewRequestSessionActivity"
             android:label="Request a session"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,6 +47,7 @@
         <activity
             android:name=".users.student.MatchedTutorsActivity"
             android:label="Matched tutors"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -54,6 +58,7 @@
         <activity
             android:name=".users.student.SearchTutorsActivity"
             android:label="Search Tutors"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -64,6 +69,7 @@
         <activity
             android:name=".users.UserProfileEditActivity"
             android:label="Edit My Profile"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -74,6 +80,7 @@
         <activity
             android:name=".users.UserProfileActivity"
             android:label="My Profile"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -84,6 +91,7 @@
         <activity
             android:name=".users.tutor.MainActivityTutor"
             android:label="@string/title_activity_main"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -94,6 +102,7 @@
         <activity
             android:name=".ForgottenPasswordActivity"
             android:label="Forgot Password?"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -104,6 +113,7 @@
         <activity
             android:name=".SignInSignUp"
             android:label="@string/title_activity_sign_in_sign_up"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -114,6 +124,7 @@
         <activity
             android:name=".users.student.MainActivityStudent"
             android:label="@string/title_activity_main"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -124,6 +135,7 @@
         <activity
             android:name=".admin.CreateSubjectActivity"
             android:label="@string/subject_panel"
+            android:screenOrientation="portrait"
             android:parentActivityName=".admin.AdminMainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -135,6 +147,7 @@
         <activity
             android:name=".admin.AdminMainActivity"
             android:label="@string/title_admin_activity_main"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -145,6 +158,7 @@
         <activity
             android:name=".SplashActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -155,6 +169,7 @@
         <activity
             android:name=".chat.ChatActivity"
             android:label="Private Messaging"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -165,6 +180,7 @@
         <activity
             android:name=".users.tutor.TutorSessionActivity"
             android:label="Requests"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -174,6 +190,7 @@
         <activity
             android:name=".users.tutor.ConversationListActivity"
             android:label="My contacts"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
